feat: Support private image registries
Allow user to define private registries
Use automatically created secret as imagePullSecrets for user services

closes #6
